improved style for orders by being responsive

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="footer-section">
-      <h3 class="footer-title">Faire des affaires avec nous</h3>
+      <h3 class="footer-title">Contact Pro</h3>
       <ul class="footer-links">
         <li><a href="#">Vendez sur L2i</a></li>
         <li><a href="#">Publicité sur L2i</a></li>
@@ -54,7 +54,7 @@
       </ul>
     </div>
 
-    <div class="footer-section">
+    <div class="footer-section footer-logo-container">
       <img src="../../../assets/L2i.ico" alt="Logo L2i" class="footer-logo" />
     </div>
   </div>
