--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 .mat-sidenav {
   width: 36%;
   transition: transform 1..11s ease-in, transform 3.33s ease-out;
+  background-color: aliceblue;
 }
 
 mat-drawer-content mat-sidenav-content {
