--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,7 +9,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: auto;
   padding: 1.11rem 0;
 }
 
@@ -21,11 +20,20 @@
   gap: 1.11rem;
 }
 
+.footer-section {
+  text-align: left;
+  align-items: flex-start;
+  width: 55%;
+}
+
 .footer-legal {
+  text-align: left;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  width: 100%;
+  height: auto;
   gap: 1.11rem;
 }
 
@@ -33,13 +41,18 @@
   font-size: 1.11rem;
 }
 
-.footer-links li a {
-  font-size: 0.8rem;
+.footer-logo {
+  max-width: 4.4rem;
 }
 
-.footer-logo {
-  max-width: 60px;
-  margin-bottom: 1.11rem;
+.footer-logo-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.footer-links {
+  padding-left: 0;
 }
 
 a {
@@ -47,7 +60,7 @@ a {
   color: aliceblue;
 }
 
-@media (max-width: 555px) {
+@media (max-width: 777px) {
   .footer-content {
     flex-direction: column;
     gap: 1.11rem;
@@ -66,7 +79,7 @@ a {
   }
 
   .footer-logo {
-    max-width: 50px;
+    max-width: 4.4rem;
   }
 
   .footer-legal {
