--- a/src/app/components/section/order/order-list/order-list.component.css
+++ b/src/app/components/section/order/order-list/order-list.component.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  margin-bottom: 60vh;
 }
 
 .status-selector {
