--- a/src/app/components/section/order/order.component.html
+++ b/src/app/components/section/order/order.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 style="color: #0bb9f0">Récapitulatif de la commande</h2>
+  <h2>Récapitulatif de la commande</h2>
   <span class="address-card">
     <button class="add-address" (click)="goToAddressForm()">
       <mat-icon>add</mat-icon>
@@ -102,72 +102,68 @@
     Veuillez ajouter une adresse à votre profil !
   </h3>
 
-  <table class="cart-table">
-    <thead>
-      <tr>
-        <th class="hide-on-mobile">ARTICLE</th>
-        <th class="show-on-mobile"></th>
-        <th>
-          <span class="hide-on-mobile">PRIX UNITAIRE HT</span>
-          <span class="show-on-mobile">HT</span>
-        </th>
-        <th>TVA</th>
-        <th>
-          <span class="hide-on-mobile">PRIX UNITAIRE TTC</span>
-          <span class="show-on-mobile">TTC</span>
-        </th>
-        <th>
-          <span class="hide-on-mobile">QUANTITÉ</span>
-          <span class="show-on-mobile">QTÉ</span>
-        </th>
-        <th>
-          <span class="hide-on-mobile">SOUS-TOTAL TTC</span>
-          <span class="show-on-mobile">SOUS-TTC</span>
-        </th>
-      </tr>
-    </thead>
-    <thead>
-      <tr></tr>
-    </thead>
+  <div class="order-table">
+    <div class="order-table-row">
+      <div class="order-table-header hide-on-mobile">ARTICLE</div>
+      <div class="order-table-header show-on-mobile"></div>
+      <div class="order-table-header">
+        <span class="hide-on-mobile">PRIX UNITAIRE HT</span>
+        <span class="show-on-mobile">HT</span>
+      </div>
+      <div class="order-table-header">TVA</div>
+      <div class="order-table-header">
+        <span class="hide-on-mobile">PRIX UNITAIRE TTC</span>
+        <span class="show-on-mobile">TTC</span>
+      </div>
+      <div class="order-table-header">
+        <span class="hide-on-mobile">QUANTITÉ</span>
+        <span class="show-on-mobile">QTÉ</span>
+      </div>
+      <div class="order-table-header">
+        <span class="hide-on-mobile">SOUS-TOTAL TTC</span>
+        <span class="show-on-mobile">SOUS-TTC</span>
+      </div>
+    </div>
 
-    <tbody>
-      <tr *ngFor="let item of cartItems$ | async">
-        <td>
-          <div class="image-icon-container">
-            <img
-              [src]="item.imageUrl"
-              alt="{{ item.title }}"
-              class="product-image"
-            />
-          </div>
-          <span>{{ item.title }}</span>
-        </td>
-        <td>
-          {{ item.regularPrice * (1 - item.tva.tvaRate) | number : "1.2-2" }} €
-        </td>
-        <td>{{ item.tva.tvaRate * 100 }} %</td>
-        <td>{{ item.regularPrice | number : "1.2-2" }} €</td>
-        <td>{{ item.quantity }}</td>
-        <td>{{ item.regularPrice * item.quantity | number : "1.2-2" }} €</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="5">&nbsp;</td>
-        <td style="text-align: center">
-          <span style="text-decoration: underline">Total TTC</span> :
-        </td>
-      </tr>
-      <tr>
-        <td colspan="5">&nbsp;</td>
-        <td style="text-align: center">
-          <span style="font-weight: bolder">
-            {{ totalTTC$ | async | number : "1.2-2" }} €
-          </span>
-        </td>
-      </tr>
-    </tfoot>
-  </table>
+    <div class="order-table-row" *ngFor="let item of cartItems$ | async">
+      <div class="order-table-cell">
+        <div class="image-icon-container">
+          <img
+            [src]="item.imageUrl"
+            alt="{{ item.title }}"
+            class="product-image"
+          />
+        </div>
+        <span>{{ item.title }}</span>
+      </div>
+      <div class="order-table-cell">
+        {{ item.regularPrice * (1 - item.tva.tvaRate) | number : "1.2-2" }} €
+      </div>
+      <div class="order-table-cell">{{ item.tva.tvaRate * 100 }} %</div>
+      <div class="order-table-cell">
+        {{ item.regularPrice | number : "1.2-2" }} €
+      </div>
+      <div class="order-table-cell">{{ item.quantity }}</div>
+      <div class="order-table-cell">
+        {{ item.regularPrice * item.quantity | number : "1.2-2" }} €
+      </div>
+    </div>
+
+    <div class="order-table-row">
+      <div class="order-table-cell" colspan="5">&nbsp;</div>
+      <div class="order-table-cell" style="text-align: center">
+        <span style="text-decoration: underline">Total TTC</span> :
+      </div>
+    </div>
+    <div class="order-table-row">
+      <div class="order-table-cell" colspan="5">&nbsp;</div>
+      <div class="order-table-cell" style="text-align: center">
+        <span style="font-weight: bolder">
+          {{ totalTTC$ | async | number : "1.2-2" }} €
+        </span>
+      </div>
+    </div>
+  </div>
 
   <div class="checkout-section">
     <button class="confirm-button" (click)="onConfirmOrder()">
