--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities; */
 
-html, body { height: 100vh !important; }
-body { height: 100vh !important; margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100vh !important;   background-color: aliceblue !important;
+}
+body { height: 100vh !important; margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: aliceblue !important;}
 
+.mat-drawer-container {
+  background-color: aliceblue;
+}
