--- a/src/app/components/section/order/order.component.css
+++ b/src/app/components/section/order/order.component.css
@@ -180,6 +180,7 @@ tbody {
 
 .order-table-header,
 .order-table-cell {
+  font-weight: bold;
   flex-basis: 20%;
   padding: 0.5em;
   text-align: center;
