improved style for favorite items

--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -48,7 +48,7 @@
         mat-raised-button
         (click)="goBackToPreviousPage()"
       >
-        Retour aux articles
+        Retour
       </button>
     </div>
   </div>
