--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -21,10 +21,10 @@
           />
           <div *ngIf="email.errors && email.touched">
             <div class="input-error" *ngIf="email.errors['required']">
-              L'adresse e-mail est requise.
+              L'adresse mail est requise.
             </div>
             <div class="input-error" *ngIf="email.errors['email']">
-              L'adresse e-mail n'est pas valide.
+              L'adresse mail n'est pas valide.
             </div>
           </div>
         </div>
