--- a/src/app/pages/user-account/favorite-user-page/favorite-user-page.component.html
+++ b/src/app/pages/user-account/favorite-user-page/favorite-user-page.component.html
@@ -1,2 +1,36 @@
-<p>favorite-user-page works!</p>
-<!-- if !isAdmin -->
+<div *ngIf="!isAdmin" class="favorite-container">
+  <div class="container">
+    <div *ngFor="let item of favoriteItems$ | async">
+      <mat-card class="custom-card" (click)="openItemDetails(item)">
+        <img
+          mat-card-image
+          [src]="item.imageUrl"
+          alt="{{ item.title }} cover image"
+        />
+        <p class="item-description">
+          {{ truncateText(item.subtitle, 44) }}
+        </p>
+        <mat-card-actions class="custom-card-actions">
+          <mat-icon class="card-icon-favorite">favorite</mat-icon>
+
+          <mat-card-header>
+            <mat-card-title>{{ item.regularPrice }} €</mat-card-title>
+          </mat-card-header>
+          <!-- CART BUTTON-->
+          <app-cart-item-quantity
+            *ngIf="!isAdmin"
+            [item]="item"
+          ></app-cart-item-quantity>
+        </mat-card-actions>
+        <div class="rating">
+          <mat-icon
+            *ngFor="let star of getRatingStars(item.rating); let i = index"
+            [ngClass]="{ 'yellow-star': star === 1, 'gray-star': star === 0 }"
+          >
+            star
+          </mat-icon>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+</div>
