--- a/src/app/components/admin/admin-order/admin-order.component.css
+++ b/src/app/components/admin/admin-order/admin-order.component.css
@@ -1,9 +1,33 @@
 .container {
-  margin-top: 7rem;
+  height: 100vh !important;
+  position: relative;
   padding: 2.2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  margin-bottom: 60vh;
+}
+
+.select-status {
+  height: 3.03rem !important;
+  padding: 0.55rem;
+  border-radius: 0.55rem;
+  border: none;
+  background: #ffffff;
+  box-shadow: 0px 0.22rem 1.11rem #F5F5F5;
+  font-size: 1.11rem;
+  color: #555555;
+  transition: all 0.3s ease;
+}
+
+.select-status:focus {
+  outline: none;
+  box-shadow: 0px 0px 0px 2px #0BB9F0;
+}
+
+.select-status:hover {
+  box-shadow: 0px 0.22rem 2.22rem rgba(0, 0, 0, 0.11);
 }
 
 span {
@@ -16,6 +40,37 @@ span {
   text-align: center;
   width: 100%;
   margin-bottom: 1.11rem;
+}
+
+.select-status-button:focus {
+  outline: none;
+  box-shadow: 0px 0px 0px 2px #0BB9F0;
+}
+
+.select-status-button:hover {
+  box-shadow: 0px 0.22rem 2.22rem rgba(0, 0, 0, 0.11);
+}
+
+
+.select-status-button {
+  height: 2.2rem !important;
+  padding: 0.55rem;
+  border-radius: 0.55rem;
+  border: none;
+  background: #ffffff;
+  box-shadow: 0px 0.22rem 1.11rem #F5F5F5;
+  font-size: 1.11rem;
+  color: #555555;
+  transition: all 0.3s ease;
+}
+
+.select-status-button:focus {
+  outline: none;
+  box-shadow: 0px 0px 0px 2px #0BB9F0;
+}
+
+.select-status-button:hover {
+  box-shadow: 0px 0.22rem 2.22rem rgba(0, 0, 0, 0.11);
 }
 
 td {
@@ -33,10 +88,10 @@ td {
 
 .order-list {
   width: 100%;
-  margin: 1rem 0;
+  margin: 3.33rem 0;
   border-collapse: collapse;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .order-list th,
@@ -48,6 +103,28 @@ td {
 
 .order-list th {
   background-color: #f5f5f5;
+}
+
+.order-details {
+  width: 100%;
+  margin: 1.11rem;
+  border-collapse: collapse;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.order-details table {
+  width: 100%;
+  margin: 1.11rem 0;
+  border-collapse: collapse;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.order-details th,
+.order-details td {
+  padding: 0.5rem;
+  border-bottom: 0.55rem solid #ddd;
 }
 
 .order-item-expanded {
@@ -73,7 +150,41 @@ td {
   display: none;
 }
 
-@media (min-width: 888px) {
+.download-invoice-button {
+  height: 2.2rem !important;
+  padding: 0.55rem 1.11rem;
+  border-radius: 0.55rem;
+  border: none;
+  background: #ffffff;
+  box-shadow: 0px 0.22rem 1.01rem rgba(0, 0, 0, 0.04);
+  font-size: 1.11rem;
+  color: #555555;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.download-invoice-button:focus {
+  outline: none;
+  box-shadow: 0px 0px 0px 2px #0BB9F0;
+}
+
+.download-invoice-button:hover {
+  box-shadow: 0px 0.22rem 2.2rem rgba(0, 0, 0, 0.1);
+}
+
+.download-invoice-button:active {
+  box-shadow: none;
+}
+
+.download-invoice-button span {
+  display: inline-block;
+  margin-left: 0.5rem;
+}
+
+@media (max-width: 777px) {
 
   .detail-text {
     display: inline-block;
@@ -84,7 +195,7 @@ td {
   }
 
   .download-text {
-    display: inline-block;
+    display: none;
   }
 }
 
