--- a/src/app/components/admin/admin-item/admin-item.component.css
+++ b/src/app/components/admin/admin-item/admin-item.component.css
@@ -3,9 +3,14 @@ body {
 }
 
 .mat-card {
+  position:relative;
+  height: 100vh !important;
+  top: 7.7rem;
+  height: calc(100% - 7.7rem);
   max-width: 600px;
   margin: 0.44rem auto;
   text-align: center;
+  margin-bottom: 44vh !important;
 }
 
 .mat-card-actions.button-row {
@@ -13,9 +18,13 @@ body {
   padding: 0;
 }
 
+h2 {
+  text-decoration: underline;
+  text-decoration-color: rgba(11, 185, 240, 0.44);
+}
+
 .mat-form-field {
   width: 100%;
-  margin-top: 0.99rem;
 }
 
 .mat-raised-button {
