--- a/src/app/pages/promos/promos-page.component.css
+++ b/src/app/pages/promos/promos-page.component.css
@@ -1,25 +1,27 @@
 .container {
+  top: 7.77rem;
+  margin: 3.33%;
   position: relative;
-  margin: 1.11rem 4.4rem;
-  top: 7rem;
-  height: calc(100% - 7rem);
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 3.33rem;
+  margin-bottom: 42vh !important;
 }
 
-
 .custom-card {
+  padding: 1.11rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  transition: box-shadow 0.3s, transform 0.3s;
-  border-radius: 9px;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 7.7%;
   overflow: scroll;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  flex-basis: calc(25% - 2rem);
-  height: 100vh !important;  cursor: pointer;
-  margin: 0;
-  margin-bottom: 1.11rem;
+  transition: box-shadow 0.3s, transform 0.3s;
+  cursor: pointer;
+  height: 404px;
+  width: 240px;
 }
 
 .custom-card:hover {
@@ -30,24 +32,22 @@
 
 .custom-card-actions {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
-.card-icon-favorite {
-  color: #FF4080;
-}
-
 mat-card-image {
-  width: 100%;
+  align-items: center;
   height: auto;
   object-fit: cover;
+  width: 100%;
 }
 
 .item-description {
   cursor: pointer;
   color: #333;
   font-size: 0.9rem;
+  text-align: center;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -74,12 +74,39 @@ mat-card-title {
   font-weight: bold;
 }
 
-.mat-paginator {
-  margin-top: 1.77rem;
-  margin-right: 1.11rem;
-  font-size: 1.11rem;
+@media screen and (max-width: 1036px) {
+  .container {
+    margin-left: 7.7%;
+  }
 }
 
-::ng-deep .mat-select-min-line {
-  font-size: 1.11rem;
+@media screen and (max-width: 888px) {
+  .container {
+    margin-left: 4.4%;
+  }
+}
+
+@media screen and (max-width: 777px) {
+  .container {
+    margin-left: 17%;
+    margin-top: 14rem;
+  }
+}
+
+@media screen and (max-width: 606px) {
+  .container {
+    margin-left: 3.33%
+  }
+}
+
+@media screen and (max-width: 505px) {
+  .container {
+    margin-left: 0%
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .container {
+    margin-left: 17%
+  }
 }
